--- a/BugTracker/BugTracker.csproj
+++ b/BugTracker/BugTracker.csproj
@@ -188,6 +188,10 @@
     <Compile Include="Migrations\202106112238499_AddForeignKeyForAllUserId.Designer.cs">
       <DependentUpon>202106112238499_AddForeignKeyForAllUserId.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202106151751210_MakeFewTicketPropertiesNullable.cs" />
+    <Compile Include="Migrations\202106151751210_MakeFewTicketPropertiesNullable.Designer.cs">
+      <DependentUpon>202106151751210_MakeFewTicketPropertiesNullable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -273,14 +277,14 @@
     <Content Include="Views\Projects\Details.cshtml" />
     <Content Include="Views\Projects\Edit.cshtml" />
     <Content Include="Views\Projects\Index.cshtml" />
+    <Content Include="Views\Projects\AssignUserToProject.cshtml" />
+    <Content Include="Views\Projects\AllProjects.cshtml" />
+    <Content Include="Views\Projects\UnAssignUserFromProject.cshtml" />
     <Content Include="Views\Tickets\Create.cshtml" />
     <Content Include="Views\Tickets\Delete.cshtml" />
     <Content Include="Views\Tickets\Details.cshtml" />
     <Content Include="Views\Tickets\Edit.cshtml" />
     <Content Include="Views\Tickets\Index.cshtml" />
-    <Content Include="Views\Projects\AssignUserToProject.cshtml" />
-    <Content Include="Views\Projects\AllProjects.cshtml" />
-    <Content Include="Views\Projects\UnAssignUserFromProject.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -307,6 +311,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202106112238499_AddForeignKeyForAllUserId.resx">
       <DependentUpon>202106112238499_AddForeignKeyForAllUserId.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202106151751210_MakeFewTicketPropertiesNullable.resx">
+      <DependentUpon>202106151751210_MakeFewTicketPropertiesNullable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
