--- a/BugTracker/BugTracker.csproj
+++ b/BugTracker/BugTracker.csproj
@@ -288,6 +288,10 @@
     <Content Include="Views\Tickets\AssignDeveloperToTicket.cshtml" />
     <Content Include="Views\Tickets\UpdateStatus.cshtml" />
     <Content Include="Views\Tickets\AllTickets.cshtml" />
+    <Content Include="Views\Admins\CreateTicketPriority.cshtml" />
+    <Content Include="Views\Admins\CreateTicketStatus.cshtml" />
+    <Content Include="Views\Admins\CreateTicketType.cshtml" />
+    <Content Include="Views\Admins\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
