--- a/BugTracker/BugTracker.csproj
+++ b/BugTracker/BugTracker.csproj
@@ -215,6 +215,7 @@
     <Compile Include="Models\TicketComment.cs" />
     <Compile Include="Models\TicketHelper.cs" />
     <Compile Include="Models\TicketHistory.cs" />
+    <Compile Include="Models\TicketHistoryHelper.cs" />
     <Compile Include="Models\TicketNotification.cs" />
     <Compile Include="Models\TicketPriority.cs" />
     <Compile Include="Models\TicketStatus.cs" />
