--- a/BugTracker/BugTracker.csproj
+++ b/BugTracker/BugTracker.csproj
@@ -299,6 +299,7 @@
     <Content Include="Views\Tickets\UpdateStatus.cshtml" />
     <Content Include="Views\Tickets\AllTickets.cshtml" />
     <Content Include="Views\Tickets\Histories.cshtml" />
+    <Content Include="Views\Tickets\AddAttachmentToTicket.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
