Move all AddNotification methods according to update in tickets into the New TicketNotificationHelper class and make required changes accordingly

--- a/BugTracker/BugTracker.csproj
+++ b/BugTracker/BugTracker.csproj
@@ -222,6 +222,7 @@
     <Compile Include="Models\TicketHistory.cs" />
     <Compile Include="Models\TicketHistoryHelper.cs" />
     <Compile Include="Models\TicketNotification.cs" />
+    <Compile Include="Models\TicketNotificationHelper.cs" />
     <Compile Include="Models\TicketPriority.cs" />
     <Compile Include="Models\TicketStatus.cs" />
     <Compile Include="Models\TicketType.cs" />
