Add info to ticket details page

--- a/BugTracker/BugTracker.csproj
+++ b/BugTracker/BugTracker.csproj
@@ -209,6 +209,10 @@
     <Compile Include="Migrations\202106211833218_AddContentToNotifications.Designer.cs">
       <DependentUpon>202106211833218_AddContentToNotifications.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202106240456025_AddResolvedPercentagesToProject.cs" />
+    <Compile Include="Migrations\202106240456025_AddResolvedPercentagesToProject.Designer.cs">
+      <DependentUpon>202106240456025_AddResolvedPercentagesToProject.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -352,6 +356,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202106211833218_AddContentToNotifications.resx">
       <DependentUpon>202106211833218_AddContentToNotifications.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202106240456025_AddResolvedPercentagesToProject.resx">
+      <DependentUpon>202106240456025_AddResolvedPercentagesToProject.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
